--- a/front/src/components/UI/Toolbar/Toolbar.scss
+++ b/front/src/components/UI/Toolbar/Toolbar.scss
@@ -9,6 +9,7 @@ $hover-color:#7dd9e4;
     position: fixed;
     background: $background-color;
     height: 56px;
+    z-index: 999;
 
     .toolbar__navigation{
         display: flex;
