Added Form and validation

--- a/front/src/components/Summary/Summary.scss
+++ b/front/src/components/Summary/Summary.scss
@@ -24,7 +24,7 @@
     display: block;
     width: 100%;
     font-size: 12px;
-    color: red;
+    color: rgb(243, 239, 239);
     background-color: #ff9999;
   }
   
